--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -338,9 +338,9 @@
 </li>
 <li><p>Source for the Sample TestCase Java Project can be found <strong><a href="../zip/sample-test.zip">HERE</a></strong>.  The test cases in this project can be adapted and can be used as part of the factory run.</p>
 </li>
-<li><p>The zip file comprising the consolidated test results that the Temenos Continuous Deployment platform will archive is available <strong><a href="../zip/testresults1.zip">here (testresults1)</a></strong> and <strong><a href="../zip/testresults2.zip">here (testresults2)</a></strong></p>
+<li><p>The zip file comprising the consolidated test results that the Temenos Continuous Deployment platform will archive is available <strong><a href="../zip/testresults1.zip">here (testresults1)</a></strong> and <strong><a href="../zip/testresults2.zip">here (testresults2)</a></strong>.</p>
 </li>
-<li><p>A sample of the consolidated results from the junit test results can be retrieved from this <strong><a href="../zip/consolidated-results.xml">link </a></strong> and the html page is available <strong><a href="../zip/run_results.html">here </a></strong></p>
+<li><p>A sample of the consolidated results from the junit test results can be retrieved from this <strong><a href="../zip/consolidated-results.xml">link </a></strong> and the html page is available <strong><a href="../zip/run_results.html">here </a></strong>.</p>
 </li>
 </ul>
 <p><br></p>
