--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -112,7 +112,7 @@ An organization can define as many components as needed but should have all mand
 <p>The names of these parts / Component Types are fixed and are not user editable. This is managed internally by the Temenos Continuous Deployment Platform admin/ development group and can only be changed or modified by this group. </p>
 <p>Each component type represents a deployable unit and has an ansible script associated to it. </p>
 <p>These components have a structure associated and work in a standardized manner across different deployment stacks (OS, App server variations, DB variations etc).</p>
-<p> The components are sorted from A to Z and you are able to search/filter the component by name. The list displays all the components available for your Organization. This is based on the available templates).</p>
+<p> The components are sorted from A to Z and you are able to search/ filter the component by name. The list displays all the components available for your Organization.</p>
 <blockquote><p><p style="font-size:18px"><span style="color:red"><strong>WARNING:</strong></span><span style="color:red">
 <span style="color:red"></span><span style="color:red">make sure to follow the naming convention as defined by the Temenos team. Any adjustments to the components&#39; title such as adding special characters or spaces will result in a failed factory run.<p>
 <p>Example: downloading the same file multiple times auto-numbers the file name from 1 onwards - t24-jars-63688104355895 <strong>(1)</strong>.zip and adds a space as well. Please use the .zip file that has the original title - <strong>t24-jars-63688104355895.zip</strong>. </p>
