--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -82,12 +82,34 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202009"><strong>202009</strong></h1>
+<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA |&nbsp; <strong>WorkflowServiceTag</strong>: TBA</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The SFTP servers can now be accessed over HTTPS</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- This enhancement directs the user to reset the password if required to enable HTTPS based access (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>).
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Implementation of portal proxy</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Security Enhancements  to remove any public IP in the URLs. Read more here.
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Provide ability to skip target environment creation for an already executed factory run.</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Temenos Continuous Deployment Platform enables users to reuse existing environments on factory runs to rerun the tests. User guide available <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a>.
+<br>
+</br> 
+<br>
+</br> </p>
 <h1 id="202008"><strong>202008</strong></h1>
 <p><strong>InfraBuild</strong>: 33  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202008.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 233  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202008 |&nbsp; <strong>WorkflowServiceTag</strong>: 202008.RC7</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Technical Enhancements</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>)
+<br>
+</br> 
+<br>
+</br> </p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007 |&nbsp; <strong>WorkflowServiceTag</strong>: 202007.RC8 </p>
