--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -90,15 +90,19 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- This enhancement directs the user to reset the password if required to enable HTTPS based access (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>).
 <br>
 </br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Implementation of portal proxy</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Security Enhancements  to remove any public IP in the URLs. Read more here.
-<br>
-</br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Provide ability to skip target environment creation for an already executed factory run.</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Provide ability to skip target environment creation for an already executed factory run.</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Temenos Continuous Deployment Platform enables users to reuse existing environments on factory runs to rerun the tests. User guide available <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a>.
 <br>
-</br> 
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Forgot password documentation</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- To recover a forgotten password please refer to the documentation available at <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">this</a> link.
 <br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Reduce session timeout for inactive users on the Temenos Continuous Deployment Platform</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- For security purposes, if you are inactive for more than 5 minutes on the Temenos Continuous Deployment Platform a dialog box pop up prompts on the screen in the last minute of your inactive session which asks to choose whether you want to extend the session or logout. Read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html">here</a>.
+<br>
+</br> </p>
+<p><br>
 </br> </p>
 <h1 id="202008"><strong>202008</strong></h1>
 <p><strong>InfraBuild</strong>: 33  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202008.RC9
