--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -190,7 +190,7 @@ Also the binaries/ artifacts have to be uploaded each time a component is update
 <li><p>The <strong>ArtifactoryKey</strong> can be taken from the TCD portal (go to General and take the value of ARTIFACTORY_KEY record):</p>
 </li>
 <li><p><strong>DestinationURL</strong> represents the exact location of the file that will be uploaded in the artifactory together with the name of the binary. For this operation, you need to take the exact path of the artifactory from the TCD portal from the Upload URL field that is displayed on the screen after the component is created:
-<img src="./images/components-and-products-uploadurl.png" alt=""></p>
+<img src="images/components-and-products-uploadurl.png" alt=""></p>
 </li>
 <li><p><strong>fileToUpload</strong> represents the binary that should be uploaded from your local machine and it must contain also the path where is present.</p>
 </li>
