--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -98,13 +98,12 @@
 </li>
 <li><p>Click on the <strong>Status</strong> tab to see the status of each user (i.e. the user status can be <strong>creating, editing, failed, deleting</strong>)</p>
 </li>
-<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Fill in the username, email, password and the user role (the SSH Key can be added later on if needed):</p>
+<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Fill in the username, email, password and the user role (the SSH Key can be added later on if needed).</p>
+</li>
+<li><p>Click <strong>Create</strong></p>
 </li>
 </ol>
 <p><img src="images/create-user.png" alt=""></p>
-<ol>
-<li>Click <strong>Create</strong></li>
-</ol>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
@@ -115,26 +114,40 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>Click on your user name (top-right)</p>
 </li>
 <li><p>Click on <strong>Profile</strong></p>
-<p><img src="images/user-change-password2.png" alt="user-change-password2"></p>
+<p><img src="images/user-change-password2.png" alt=""></p>
 </li>
 <li><p>Click on <strong>Change Password</strong></p>
-<p><img src="images/user-change-password3.png" alt="user-change-password3"></p>
+<p><img src="images/user-change-password3.png" alt=""></p>
 </li>
 <li><p>Fill in the <strong>Current Password</strong>, <strong>New Password</strong> and <strong>Confirm Password</strong> and click <strong>Confirm</strong></p>
-<p><img src="images/user-change-password4.png" alt="user-change-password4"></p>
-</li>
-</ol>
+<p><img src="images/user-change-password4.png" alt=""></p>
 <blockquote><p>Note: On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
 </blockquote>
-<p> <img src="images/user-change-password.png" alt="user-change-password"></p>
+<p><img src="images/user-change-password.png" alt=""></p>
+</li>
+</ol>
 <h1 id="recover-password">Recover Password</h1>
 <p>If you have forgotten or lost your password, you can recover it by contacting the below:</p>
 <ul>
-<li><p>If your Org is on a PROD platform contact CloudPlatformSupport@temenos.com </p>
+<li><p>If your Org is on a PROD platform contact us at CloudPlatformSupport@temenos.com </p>
 </li>
-<li><p>If your Org is on a EU or TSS platform contact Global Cloud Platform Support (gcp@temenos.com) </p>
+<li><p>If your Org is on a EU or TSS platform contact the Global Cloud Platform Support team (gcp@temenos.com) 
+<br>
+</br></p>
 </li>
 </ul>
+<h1 id="update-ssh-key">Update SSH Key</h1>
+<p>To Update the SSH Key, follow the instructions below:</p>
+<ol>
+<li><p>Click on your <strong>user name</strong> (top-right) and then on <strong>Profile</strong></p>
+</li>
+<li><p>Click on <strong>Edit SSH</strong> button </p>
+<p><img src="images/user-edit-ssh.png" alt=""></p>
+</li>
+<li><p>Do the necessary changes and click on <strong>Update SSH</strong> / if no changes are required click on <strong>Cancel</strong></p>
+<p><img src="images/update-ssh-key.png" alt=""></p>
+</li>
+</ol>
 <p><br></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
