--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -139,7 +139,7 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <p><img src="images/templates-content.png" alt=""></p>
 </li>
 </ol>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
