--- a/home/toc.html
+++ b/home/toc.html
@@ -114,6 +114,9 @@
                           <a href="techguides/export-import-database.html" name="" title="Export and Import a Database">Export and Import a Database</a>
                         </li>
                         <li>
+                          <a href="techguides/https-in-front-of-sftp.html" name="" title="How to access the SFTP using HTTPs">How to access the SFTP using HTTPs</a>
+                        </li>
+                        <li>
                           <a href="techguides/access-t24-ud-directories.html" name="" title="Access T24 UD Directories">Access T24 UD Directories</a>
                         </li>
                         <li>
